k3s-cluster/kube-apps/manifests/mosquitto/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mosquitto
  labels:
    app.kubernetes.io/name: mosquitto
