k3s-cluster/kube-apps/manifests/mosquitto/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: mosquitto
  labels:
    app.kubernetes.io/name: mosquitto
spec:
  type: LoadBalancer
  ports:
  - name: mqtt
    port: 1883
    targetPort: 1883
    protocol: TCP
  - name: websocket
    port: 9001
    targetPort: 9001
    protocol: TCP
  selector:
    app.kubernetes.io/name: mosquitto
